--- a/02-General-Specification.Rmd
+++ b/02-General-Specification.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 # General Specification
 
 This chapter covers basic specifications.
