--- a/index.Rmd
+++ b/index.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 # Introduction
 
 This chapter discusses getting started with your Compulite Vibe console.
