--- a/05-File-Management.Rmd
+++ b/05-File-Management.Rmd
@@ -13,9 +13,9 @@ This chapter provides an overview of Vibe's Graphical User Interface (GUI).
 ## Show Menu
 
 
-The {Show} menu is the first item of the {VIBE} Menu. It contains 5 sub menus:
+The Show menu is the first item of the {VIBE} Menu. It contains 5 sub menus:
 
-![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FGHsfUzITLi77dX4DSZz4%2F5.1.webp?alt=media&token=c3193233-db07-484a-97ed-93c63d8fbb40)
+![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2Fd1qUl43R5aNuzM0Vd4zj%2F5.1.png?alt=media&token=2a502a88-1fe4-4648-8ed2-0606cc272d37)
 
 1.  **{New Show}** - Opens the New Show pop-up with options for {Cancel} {Don't Save} {Save}.
     
